# frost-btc-state-machine

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: bitcoin.rs  errors.rs  guardian.rs  keys.rs  lib.rs  main.rs  signer.rs  transport.rs
tests/: test_frost_state_machine.rs  test_main.rs  test_taproot_signature.rs  tests.rs  utils.rs
