[package]
name = "frost-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bitcoin = { version = "0.32", features = ["serde"] }
frost-secp256k1-tr = { version = "2.1", features = ["serde"] }
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.14", features = ["hex"]}
hex = "0.4"
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
