[package]
name = "frost-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoincore-rpc = { git = "https://github.com/andreasbros/rust-bitcoincore-rpc.git", rev = "4a31697258bb4aa06f103bc2cc89daff94994f4e" }
frost-secp256k1-tr = { version = "2.1", features = ["serde"] }
frost-core = "2.1"
k256 = { version = "0.13.4", features = ["arithmetic"] }
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.14", features = ["hex"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
rand = "0.8"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
hex = "0.4.3"
metrics = "0.22.0"
metrics-exporter-prometheus = "0.13.0"
futures = "0.3.1"

[dev-dependencies]
tempfile = "3"
